--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="image_container ">
           <img  src="./images/me.png" alt=""  class="img-fluid">
           
-          <h4 class="name">hritik mittal</h4>
+          <h4 class="name">HRITIK MITTAL</h4>
           <h4 class="developer">Python And Web Developer.</h4>
           <div class="contacts">
            
@@ -122,7 +122,7 @@
               <img src="./images/zomato.png" class="card-img-top pi" alt="... ">
               <div class="card-body">
                 <h5 class="card-title">Zomato landing page</h5>
-                <p class="card-text">Created a Zomato landing  page using html &css Non Responsitive  </p>
+                <p class="card-text">Created a Zomato landing  page using html &css   </p>
                 <a  href="https://hritikmittal09.github.io/ZOMATO-LANGING-PAGE/"  class="btn btn-primary" target="_blank">View project</a>
               </div>
             </div>
@@ -209,7 +209,7 @@
             <i style="padding: 20px; ; align-self: center;" class="fa-solid fa-lightbulb fa-3x "></i>
             <div class="card-body">
               <h5 class="card-title">Twowaits Python Intern</h5>
-              <p class="card-text">Python inern for 1 month woreked on backend of voice assistant</p>
+              <p class="card-text">Python intern for 1 month worked on backend of voice assistant</p>
               <a href="https://drive.google.com/file/d/1CcbbJcI6SE01w9xOWB2kdSc3NUCw8_0D/view" target="_blank" class="btn btn-primary">View Certificate</a>
             </div>
           </div>
