--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img src="./images/html css js.png" class="d-block w-10 pi" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./images/python.png" class="d-block w-10 pi" alt="...">
+                <img src="./images/py-img2.webp" class="d-block w-10 pi" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="./images/flask.png" class="d-block w-10 pi" alt="...">
