change zomato website

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <div class="card-body">
                 <h5 class="card-title">Zomato landing page</h5>
                 <p class="card-text">Created a Zomato landing  page using html &css   </p>
-                <a  href="https://hritikmittal09.github.io/ZOMATO-LANGING-PAGE/"  class="btn btn-primary" target="_blank">View project</a>
+                <a  href="https://hritikmittal09.github.io/ZOMATO-LANDING-PAGE/"  class="btn btn-primary" target="_blank">View project</a>
               </div>
             </div>
 
