add shadow to dictionary project card

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             </div>
 
           </div>
-          <div class="card " style="width: 18rem;">
+          <div class="shadow-lg card-dict">
+          <div class="card" style="width: 18rem;">
             <img src="./images/dict.jpg" class="card-img-top pi" alt="... ">
             <div class="card-body">
               <h5 class="card-title">Dictionary App</h5>
@@ -165,6 +166,7 @@
               </button>
             </div>
           </div>
+        </div>
 
 
 
@@ -186,7 +188,7 @@
 
 
           <div class="card shadow-lg d-flex justify-content-end" style="width: 18rem;">
-            <img src="./images/company logo.png" class="card-img-top pi" alt="...">
+            <img src="./images/company logo.png" class="card-img-top pi w-10" alt="...">
             <div class="card-body">
               <h5 class="card-title">Devtown Internship</h5>
               <p class="card-text">Worked  As A Web Developer Worked On different Projects .</p>
