experiene icon removed

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <h4 class="my-5"> Experience</h4>
     <div class="container d-flex gap-5 flex-wrap mx-5">
       <div class="card shadow-lg d-flex justify-content-start" style="width: 18rem;">
-        <img src="./images/twowaits.jfif" class="card-img-top pi shadow-l " alt="...">
+        <i style="align-self:center ; padding: 20px;" class="fa-brands fa-python fa-3x"></i>
         <div class="card-body">
           <h5 class="card-title">Twowaits Python Intern</h5>
           <p class="card-text">Worked As A Python Developer From Feb 1 2022 To Feb 28 Feb.</p>
@@ -210,7 +210,7 @@
 
 
       <div class="card shadow-lg d-flex justify-content-end" style="width: 18rem;">
-        <img src="./images/company logo.png" class="card-img-top pi w-10" alt="...">
+        <i style="align-self:center ; padding: 20px;" class="fa-brands fa-html5 fa-3x"></i>
         <div class="card-body">
           <h5 class="card-title">Devtown Internship</h5>
           <p class="card-text">Worked As A Web Developer Worked On different Projects .</p>
